# zaracast

./: .gitignore  README.md  pubspec.yaml  pyproject.toml
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: app.dart
lib/src/core/: service_locator.dart
lib/src/core/api/: podcast_index_client.dart
lib/src/core/database/: app_database.dart  app_database.g.dart  queries.dart
lib/src/core/delete/: play_button.dart  settings_options_bottom_sheet.dart
lib/src/core/functions/: format_duration.dart  format_publish_date.dart
lib/src/core/router/: build_router.dart  stateful_shell_scaffold.dart
lib/src/core/services/: connectivity_service.dart
lib/src/database/queries/: show_queries.dart
lib/src/features/followed_shows/: followed_shows_page.dart
lib/src/features/latest_episodes/: episode_list_tile.dart  latest_episodes_page.dart
lib/src/features/my_episodes/: episode_list_tile.dart  my_episodes_page.dart
lib/src/features/my_shows/: my_shows_page.dart  show_card.dart
lib/src/features/profile/: profile_page.dart
lib/src/features/queue/: queue_list_tile.dart  queue_page.dart
lib/src/features/search/: search_list_tile.dart  search_page.dart
lib/src/features/settings/: settings_page.dart
lib/src/features/show_details/: show_home_page.dart
lib/src/features/show_home/: show_home_page.dart  show_provider.dart
lib/src/models/: episode_model.dart  show_model.dart
lib/src/shared/icon_buttons/: add_to_queue_icon_button.dart  back_icon_button.dart  (+8 more)
lib/src/state/: my_provider.dart
(+21 files in other folders)
