# pyproject.toml
[tool.poetry]
name = "zaratask"
version = "0.1.0"
description = "An opensource Flutter podcast app"
authors = ["red <red@firepanda.io>"]
readme = "README.md"
package-mode = false # only use poetry for dependencies

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
aider-chat = "^0.62.0"
boto3 = "^1.35.57"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"